[tool.poetry]
name = "source-tax-rates"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
pandarallel = "^1.6.5"
plotly = "^6.0.0"
dash = "^2.18.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
